# mcp-dns-server

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  MIXIN_ARCHITECTURE.md  README.md  codecov.yml  launch.py  lint.sh  pyproject.toml  setup.cfg  test_dnssec_comprehensive.py  test_dnssec_debug.py  test_dnssec_fix.py  test_ds_validation.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: dependency-review.yml  python-package.yml  release.yml
config/: config.yaml
docs/: usage.md
src/: __init__.py  dns_mcp_server.py  dnssec.py  dnstrace.py  exceptions.py  honeypot.py  intercept.py  lookalike_risk.py  nstests.py  prompt_mixins.py  resolver.py  resource_mixins.py  root_detector.py  scanner.py  server_mixins.py  server_role.py  tld_validator.py  tool_mixins.py  tools.py  typedefs.py
src/dns_mcp_server/: __init__.py  main.py  prompt_mixins.py  resolver.py  resource_mixins.py  server_mixins.py  tool_mixins.py  typedefs.py
src/dns_mcp_server/knowledge_base/data/: dns_extranet_setup.yaml  dns_security_best_practices.yaml
src/dns_mcp_server/tools/: __init__.py  converter.py
src/dns_mcp_server/tools/assistant/: __init__.py  forward_resolution_solver.py
src/dns_mcp_server/tools/dns/: __init__.py  basic_dns.py  ns_tests.py  trace.py
src/dns_mcp_server/tools/mdns/: browser.py  service_map.py
src/dns_mcp_server/tools/scanner/: dns_spoof.py  open_resolver.py  root_server.py
src/dns_mcp_server/tools/validator/: dnssec.py  ns_role.py  risk.py  tld.py
src/knowledge_base/: __init__.py  manager.py
src/knowledge_base/data/: dns_extranet_setup.yaml  dns_security_best_practices.yaml  dns_troubleshooting_common_issues.yaml
src/tools/: __init__.py  converter.py  query.py
src/tools/assistant/: __init__.py  forward_resolution_solver.py
src/tools/dns/: __init__.py  basic_dns.py  ns_tests.py  trace.py
src/tools/mdns/: __init__.py  browser.py  service_map.py
src/tools/query/: __init__.py  ns_tests.py
src/tools/scanner/: __init__.py  dns_spoof.py  open_resolver.py  root_server.py
src/tools/validator/: __init__.py  dnssec.py  fqdn.py  ns_role.py  risk.py  tld.py
tests/: conftest.py  test_basic_dns.py  test_dns_mcp_server.py  test_dnssec.py  test_edge_cases.py  test_fqdn.py  test_integration.py  test_knowledge_base_manager.py  test_knowledge_base_resources.py  test_ns_role_validator.py  test_ns_tests.py  test_resolver.py  test_risk_validator.py  test_tld_validator.py  test_trace.py
