[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-dns-server"
version = "0.1.0"
description = "An MCP server for DNS name resolution and troubleshooting"
readme = "README.md"
authors = [
    {name = "Tobias Hildebrand", email = "tobus3000@tobotec.ch"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "dnspython>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
]

[project.scripts]
mcp-dns-server = "launch:main"

[project.urls]
Homepage = "https://github.com/tobus3000/mcp-dns-server"
Repository = "https://github.com/tobus3000/mcp-dns-server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
knowledge_base = ["data/*.yaml", "data/*.yml"]