[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-dns-server"
version = "0.1.0"
description = "An MCP server for DNS name resolution and troubleshooting"
readme = "README.md"
authors = [
    {name = "Tobias Hildebrand", email = "tobus3000@tobotec.ch"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",   # For MCP server framework
    "dnspython>=2.6.0",  # For modern DNS features and DNSSEC support
    "pyyaml>=6.0.1",     # Latest stable for configuration handling
    "scapy>=2.6.1",      # For network packet operations
    "aiohttp>=3.9.0",    # For async HTTP requests
    "zeroconf>=0.131.0", # For mDNS service discovery
    "typing-extensions>=4.8.0"  # For advanced typing support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",           # Latest stable for testing
    "pytest-asyncio>=0.21.1",  # For async test support
    "pytest-cov>=4.1.0",       # For test coverage reporting
    "black>=23.11.0",         # For code formatting
    "pylint>=3.0.2",         # For code analysis
    "mypy>=1.7.0"           # For static type checking
]

[project.scripts]
mcp-dns-server = "launch:main"

[project.urls]
Homepage = "https://github.com/tobus3000/mcp-dns-server"
Repository = "https://github.com/tobus3000/mcp-dns-server.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
knowledge_base = ["data/*.yaml", "data/*.yml"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".gitignore", ".dockerignore"]

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0718",  # broad-exception-caught
]
ignore = [".git", "__pycache__", "build", "dist"]
good-names = ["i", "j", "k", "ex", "fd", "fp", "id", "ip"]
max-locals = 20
max-args = 10
max-branches = 15
max-statements = 60
