[project]
name = "mcp-dns-server"
dynamic = ["version"]
description = "An MCP server for DNS name resolution and troubleshooting"
readme = "README.md"
authors = [
    {name = "Tobias Hildebrand", email = "tobus3000@tobotec.ch"}
]
license = {text = "MIT"}
license-files = ["LICENSE*"]
keywords = ["MCP", "LLM", "DNS", "DNSSEC", "Network", "Server", "Troubleshooting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",   # For MCP server framework
    "dnspython>=2.8.0",  # For modern DNS features and DNSSEC support
    "pyyaml>=6.0.1",     # Latest stable for configuration handling
    "scapy>=2.6.1",      # For network packet operations
    "aiohttp>=3.9.0",    # For async HTTP requests
    "zeroconf>=0.148.0", # For mDNS service discovery
    "typing-extensions>=4.15.0"  # For advanced typing support
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",           # Latest stable for testing
    "pytest-asyncio>=1.3.0",  # For async test support
    "pytest-cov>=7.0.0",       # For test coverage reporting
    "ruff>=0.14.10",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "git-cliff>=2.11.0"
]

[project.scripts]
mcp-dns-server = "dns_mcp_server:main"  # Entry point for CLI usage

[project.urls]
Homepage = "https://github.com/tobus3000/mcp-dns-server"
Repository = "https://github.com/tobus3000/mcp-dns-server.git"
Issues = "https://github.com/tobus3000/mcp-dns-server/issues"

[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs >= 0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
vcs = "git"
format = "{tag}.dev{distance}"  # omit the +g<hash> local segment
fallback = "0.0.0.dev0"  # <-- fallback if no tag exists

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.setuptools.package-data]
dns_mcp_server = ["config/*.yaml", "knowledge_base/data/*.yaml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --cov=mcp-dns-server --cov-report=term"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "dns: DNS-related tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take longer to run",
    "kb: Knowledge base related tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ble2wled"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.
"""
body = """
{% if version %}
## Version {{ version }}

{% if commits %}
{% for commit in commits -%}
- {{ commit.message | default(default=commit.hash) }}
{% endfor %}
{% else %}
- No changes.
{% endif %}
{% endif %}
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
sort_commits = "oldest"
tag_pattern = "v[0-9].*"

commit_parsers = [
  { message = "BREAKING CHANGE", group = "ðŸ’¥ Breaking Changes" },
  { message = "!", group = "ðŸ’¥ Breaking Changes" },
  { message = "^feat", group = "ðŸš€ Features" },
  { message = "^fix", group = "ðŸ› Bug Fixes" },
  { message = "^docs", group = "ðŸ“š Documentation" },
  { message = "^perf", group = "âš¡ Performance" },
  { message = "^refactor", group = "ðŸ”¨ Refactoring" },
  { message = "^chore", skip = true },
]
